@@ -1,3 +1,14 @@
+2010-03-09  Helmut Eller  <heller@common-lisp.net>
+
+	Some more fixes for Allegro
+
+	* swank-allegro.lisp (function-source-location): Use
+	xref::object-to-function-name which seems to work better for some
+	cases.
+	(fspec-definition-locations): For :top-level-forms return a list
+	of ((fspec loc)) not just (fspec loc).  Also deal with the file
+	vs. buffer issue.
+
 2010-03-08  Stas Boukarev  <stassats@gmail.com>
 
 	* slime.el (slime-extract-context): Add defvar and defparameter.
